--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "@tailwindcss/vite": "^4.0.13",
     "@tanstack/react-router": "^1.114.17",
     "@tanstack/router-devtools": "^1.114.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.13"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.13",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
