--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.13",
+    "@tanstack/react-query": "4",
+    "@tanstack/react-query-devtools": "4",
     "@tanstack/react-router": "^1.114.17",
     "@tanstack/router-devtools": "^1.114.17",
     "class-variance-authority": "^0.7.1",
