--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/fiber": "^9.1.0",
     "@tailwindcss/vite": "^4.0.13",
     "@tanstack/react-query": "4",
     "@tanstack/react-query-devtools": "4",
     "@tanstack/react-router": "^1.114.17",
     "@tanstack/router-devtools": "^1.114.17",
+    "@types/three": "^0.174.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -45,6 +47,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   }
