--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/fiber": "^9.1.0",
     "@tailwindcss/vite": "^4.0.13",
@@ -36,6 +38,7 @@
     "@types/three": "^0.174.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.479.0",
     "next-themes": "^0.4.6",
